// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button (Snapshot) Button renders hello world 1`] = `
<button
  className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-htpNat jepUei"
  disabled={false}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-2"
  >
    <span
      className="sc-bdVaJa fdVuct"
      color={undefined}
      fontSize={undefined}
    >
      ButtonText
    </span>
  </span>
  <span
    className="MuiTouchRipple-root-30"
  />
</button>
`;

exports[`Button (Snapshot) should render Button component 1`] = `
<button
  className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-htpNat jepUei"
  disabled={false}
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-2"
  >
    <span
      className="sc-bdVaJa fdVuct"
      color={undefined}
      fontSize={undefined}
    >
      
    </span>
  </span>
  <span
    className="MuiTouchRipple-root-30"
  />
</button>
`;
